# gauss_newton_exo_solver

./: CMakeLists.txt  exotica_plugins.xml  package.xml
include/GaussNewton/: GaussNewton.hpp
init/: GNsolver.in
src/: GaussNewton.cpp
